--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="stylesheet"
           href="style.css">
-    <title>Instagram Clone</title>
+    <title>Polarização Política</title>
 </head>
 <body>
         <div id="root"></div>
