--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 <body>
         <div id="root"></div>
         <script type="module" src="/src/main.jsx"></script>
+        <script>
+            if(window.localStorage) alert("funciona")
+            else alert("nao funciona")
+        </script>
 </body>
 </html>
 
