acertando sticky no safari

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <link rel="stylesheet"
           href="style.css">
     <title>Polarização Política</title>
+    <meta name="viewport" content="minimum-scale=1">
+
 </head>
 <body>
         <div id="root"></div>
