--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet"
           href="style.css">
     <title>Polarização Política</title>
-    <meta name="viewport" content="minimum-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
 
 </head>
 <body>
